# almondsrc

./: Makefile.am  README.md  api.c  api.h  api_s.c  config.c  config.h  config.h.in  config.h.real  config_s.c  configuration.h  configure.ac  constants.h  data.h  gardener.py  install_almond.sh  jwt_validate.c  jwt_validate.h  kafkaapi.h  logger.c  logger.h  logging.h  main.c  main.h  main_s.c  memalloc.alm  mod_avro.c  mod_avro.h  mod_kafka.c  mod_kafka.h  plugins.c  plugins.h  plugins_status.avsc  start_almond.sh  structures.h  utils.h  version.h
conf/: aliases.conf  almond.conf  kafka.conf.example  memalloc.alm  plugins.conf  tokens  users.conf
plugins/: check_apt  check_disk  check_load  check_mem.py  check_memory.py  check_memory1.py  check_open_files.pl  check_ping  check_procs  check_redpanda_metrics.py  check_uptime.sh  check_users
www/: readme.txt
www/api/: .env  admin_page.py  auth2fa.py  auth_config.py  howru.py  login_handler.py  rs.sh  wsgi.py
www/api/auth/: auth0.py  base.py  entra.py  factory.py  keycloak.py  keycloak_ropc.py  local.py  oauth_code.py  okta.py  provider_instance.py  provider_instance.py.bak  service.py  token_utils.py
www/api/mods/: README  modexport.py  modxml.py
www/api/mods/enabled/: modyaml.py
www/api/otel/: nagios_to_otel.py  otel_exporter.py
www/api/static/: style.css
www/api/static/charts/: info.txt
www/api/templates/: 403.html  403_fa.html  action.html  actionapi.html  add_conf.html  addplugin.html  admin.html  api.html  conf.html  conf_a.html  deleteplugin.html  details.html  documentation.html  documentation_a.html  editplugin.html  enable2fa.html  enablefa.html  execute.html  foot.html  graph.html  head.html  head_r.html  howruconf.html  howruconf_a.html  index.html  index_e.html  index_m.html  index_w.html  installplugin.html  login_a.html  login_fa.html  logs.html  metrics.html  metrics_a.html  monitor.html  monitoring.html  plugin_query.html  plugin_query_mm.html  pluginadded.html  plugins.html  (+11 more)
